# SilentLock

./: Cargo.toml  LICENSE  README.md
src/: encryption.rs  main.rs  models.rs  utils.rs
src/handlers/: files.rs
static/: index.html
