[package]
name = "silentlock"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.0"

# Encryption
aes-gcm = "0.10.1"
rand = "0.8.5"
rsa = "0.9.2"
sha2 = "0.10.6"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Async
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"

# Logging
env_logger = "0.10.0"
log = "0.4.17"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
dotenv = "0.15.0"
thiserror = "1.0.40"
chrono = { version = "0.4.24", features = ["serde"] }
